# SilentEngine

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Requirements.txt
Assets/Locales/English (US)/: Locale.json
Assets/Locales/EnglishUs/: Locale.json  Metadata.json
Assets/Locales/French/: Locale.json  Metadata.json
Assets/Locales/German/: Locale.json  Metadata.json
Assets/Locales/Italian/: Locale.json  Metadata.json
Assets/Locales/Japanese/: Locale.json  Metadata.json
Assets/Locales/Polish/: Metadata.json
Assets/Locales/SpanishLatam/: Locale.json  Metadata.json
Assets/Locales/SpanishSpain/: Locale.json  Metadata.json
Assets/Locales/SpanishSpainOriginal/: Locale.json  Metadata.json
Assets/Locales/en/: Locale.json
Licences/Assets/Fonts/: NotoSans-MediumJP_LICENCE.txt  dalmoori_LICENSE.txt  dalmoori_NOTICE.txt
Licences/Libraries/: smol-atlas_LICENSE.txt
Licences/Tools/: SDL_shadercross_LICENSE.txt
Resources/: Icon.icns
Source/: Application.cpp  Application.h  Debug.cpp  Framework.cpp  Framework.h  Main.cpp  Platform.cpp  Platform.h  Psx.cpp  Psx.h  Types.h
Source/Assets/: AssetStreamer.cpp  AssetStreamer.h  Assets.cpp  Assets.h  Fonts.cpp  Fonts.h  Locales.cpp  Locales.h  TranslationKeys.h
Source/Assets/Loaders/: Anm.cpp  Anm.h  Ilm.cpp  Ipd.cpp  Plm.cpp  Plm.h  Png.cpp  Png.h  Tim.cpp  Tim.h  Tmd.cpp  Tmd.h
Source/Assets/Parsers/: Anm.cpp  Ilm.cpp  Ilm.h  Ipd.cpp  Ipd.h  Plm.cpp  Png.cpp  Png.h  Tim.cpp  Tim.h  Tmd.cpp  Tmd.h
Source/Assets/Shaders/: Blit.frag.hlsl  Crt.frag.hlsl  Dither.frag.hlsl  Glyph2d.frag.hlsl  LumaFade.frag.hlsl  Model.frag.hlsl  Primitive2d.vert.hlsl  Primitive3d.vert.hlsl  Shape2d.frag.hlsl  Sprite2d.frag.hlsl  Vignette.frag.hlsl
Source/Assets/Shaders/Common/: Math.hlsli
Source/Audio/: Audio.cpp  Audio.h  Spu.cpp  Spu.h
Source/Debug/: Debug.cpp  Debug.h  GameData.cpp  GameData.h  PowerMenu.cpp  PowerMenu.h  Scratchpad.cpp  Scratchpad.h
Source/Game/: Common.h  Dummy.h  Entry.cpp  Entry.h  Game.cpp  Game.h
Source/Game/Bodyprog/: Bodyprog.h  CharaSpawn.cpp  CharaSpawn.h  Collision.h  Demo.cpp  Demo.h  Dms.h  EventFlags.h  MemCard.cpp  MemCard.h  SoundEffects.h  Title.cpp  Title.h
Source/Game/Bodyprog/Events/: EventsMain.cpp  EventsMain.h  GameSysStates.cpp  GameSysStates.h  MapMsgDisplay.cpp  MapMsgDisplay.h  NpcMain.cpp  NpcMain.h  Radio.cpp  Radio.h  bodyprog_data_800A99B4.cpp  bodyprog_data_800A99B4.h
Source/Game/Bodyprog/GameBoot/: FsCharaAnim.cpp  FsCharaAnim.h  GameBoot.cpp  GameBoot.h  GameLoad.cpp  GameLoad.h
Source/Game/Bodyprog/LibSd/: LibSd.h  SmfIo.cpp  SmfMain.cpp  SmfMid.cpp  SmfSnd.cpp  SmfTables.cpp  SmfTables.h
Source/Game/Bodyprog/Math/: Math.cpp  Math.h
Source/Game/Bodyprog/Screen/: BackgroundDraw.cpp  BackgroundDraw.h  CutsceneBorder.cpp  CutsceneBorder.h  ScreenData.cpp  ScreenData.h  ScreenDraw.cpp  ScreenDraw.h  ScreenFade.cpp  ScreenFade.h  TextDraw.cpp  TextDraw.h
Source/Game/Bodyprog/Sound/: SdCall.cpp  SdData.cpp  SoundSystem.h
Source/Game/Bodyprog/Sys/: CharaFileInfos.cpp  FsScreens.cpp  FsScreens.h  GameMain.cpp  GameMain.h  Joy.cpp  Joy.h  MapInfo.c  MapInfo.h  SettingsReset.cpp  SettingsReset.h  SysWorkGlobals.cpp  SysWorkGlobals.h  VSync.cpp  Vsync.h
Source/Game/Bodyprog/Text/: TextDebugDraw.h  TextDraw.cpp  TextDraw.h
Source/Game/Bodyprog/View/: Enums.h  Structs.h  VcMain.cpp  VcMain.h  VcUtil.cpp  VcUtil.h  VwCalc.cpp  VwCalc.h  VwMain.cpp  VwMain.h  VwSystem.cpp  VwSystem.h
Source/Game/Compatibility/: Memory.cpp  Memory.h
Source/Game/Main/: FileInfo.cpp  FileInfo.h  FsMem.cpp  FsMem.h  FsQueue.cpp  FsQueue.h  Mem.h  MemMove32.cpp  Rng.cpp  Rng.h
Source/Game/Maps/Characters/: Harry.h
Source/Game/Screens/BKonami/: BKonami.cpp  BKonami.h
Source/Game/Screens/Options/: Brightness.cpp  Controller.cpp  Controller.h  Options.cpp  (+6 more)
Source/Gui/: Button.cpp  Button.h
Source/Input/: Action.cpp  Action.h  Binding.cpp  Binding.h  Event.cpp  Event.h  Input.cpp  Input.h  Text.cpp  Text.h
Source/Math/: Compatibility.cpp  Compatibility.h  Constants.h  FixedPoint.h  Legacy.cpp  Legacy.h  Math.h  Rng.cpp  Rng.h  Utils.cpp  Utils.h
Source/Math/Legacy/: Arithmetic.h  Compatibility.cpp  FixedPoint.h  Math.cpp  Math.h
Source/Math/Objects/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.h  AxisAlignedBoundingRect.cpp  AxisAlignedBoundingRect.h  AxisAngle.h  BezierCurve2.h  BoundingFrustum.cpp  BoundingFrustum.h  BoundingSphere.cpp  BoundingSphere.h  Color.cpp  Color.h  EulerAngles.cpp  EulerAngles.h  Matrix.cpp  Matrix.h  OrientedBoundingBox.cpp  OrientedBoundingBox.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Vector2.cpp  Vector2.h  Vector2i.cpp  Vector2i.h  Vector3.cpp  Vector3.h  Vector3i.cpp  Vector3i.h  Vector4.h
Source/Renderer/: Renderer.cpp  Renderer.h
Source/Renderer/Common/: Compatibility.cpp  Compatibility.h  Constants.h  Enums.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h  View.cpp  View.h
Source/Renderer/Shaders/: Blit.frag.hlsl  Glyph2d.frag.hlsl  Sprite2d.frag.hlsl  Triangle2d.frag.hlsl  Triangle2d.vert.hlsl  Vignette.frag.hlsl
Source/Savegame/: Savegame.cpp  Savegame.h  Schemas.h
Source/Scripting/: Lua.cpp  Lua.h
Source/Services/: Clock.cpp  Clock.h  Filesystem.cpp  Filesystem.h  Message.cpp  Message.h  Options.cpp  Options.h  Platform.cpp  Platform.h  Toasts.cpp  Toasts.h
Source/Utils/: Bitfield.cpp  Bitfield.h  BlockAllocator.cpp  BlockAllocator.h  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.h  Font.cpp  Font.h  Parallel.cpp  Parallel.h  SpatialHash.cpp  SpatialHash.h  Stream.cpp  Stream.h  Translator.cpp  Translator.h  Utils.cpp  Utils.h  Video.cpp  Video.h
Tools/: ConvertMedia.py  ConvertMusicSequence.py  ExtractAssets.py  GenerateLauncher.py  GenerateShaders.py  Launcher.py
Tools/dumpsxiso/Linux/: dumpsxiso
Tools/dumpsxiso/macOS/: dumpsxiso
Tools/freepats-tools/: convertSoundBank.py  sf2.py  sfz.py
Tools/kdt-tool/: kdt-tool.py
Tools/shadercross/Linux/: shadercross
Tools/vgmstream-cli/Linux/: vgmstream-cli
Tools/vgmstream-cli/maxOS/: vgmstream-cli
(+104 files in other folders)
